@@ -1,100 +1,138 @@
 package de.codecentric.spring.boot.chaos.monkey.configuration;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import java.lang.reflect.Constructor;
+import java.lang.reflect.Method;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import javax.validation.constraints.NotNull;
-import lombok.Data;
-import lombok.SneakyThrows;
+import lombok.*;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.boot.context.properties.ConfigurationProperties;
+import org.springframework.boot.context.properties.NestedConfigurationProperty;
+import org.springframework.util.ClassUtils;
 
 @Data
-@ConfigurationProperties(prefix = "chaos.monkey.assaults.exception")
 public class AssaultException {
 
   private static final Logger Logger = LoggerFactory.getLogger(AssaultException.class);
 
-  @Value("${type : java.lang.RuntimeException}")
-  private String type;
+  private static final ObjectMapper objectMapper = new ObjectMapper();
 
-  @Value("${arguments : #{null}}")
-  private List<ExceptionArgument> arguments;
+  /**
+   * special value used to represent constructors. "<init>" was chosen because it is used as jvm
+   * internal name for constructors, which means no method could be named like this.
+   */
+  private static final String CONSTRUCTOR = "<init>";
 
-  public List<ExceptionArgument> getArguments() {
-    return arguments;
-  }
+  @NotNull private String type = "java.lang.RuntimeException";
 
-  public void setArguments(List<ExceptionArgument> arguments) {
-    this.arguments = arguments;
+  @NotNull private String method = CONSTRUCTOR;
+
+  @NotNull @NestedConfigurationProperty
+  private List<ExceptionArgument> arguments =
+      Collections.singletonList(
+          new ExceptionArgument(String.class.getName(), "Chaos Monkey - RuntimeException"));
+
+  @SneakyThrows
+  @JsonIgnore
+  public void throwExceptionInstance() {
+    throw getThrowable();
   }
 
   @JsonIgnore
-  @SneakyThrows
-  public void throwExceptionInstance() {
+  private Throwable getThrowable() {
     Throwable instance;
     try {
-      Class<? extends Throwable> exceptionClass = getExceptionClass();
-      if (arguments == null) {
-        Constructor<? extends Throwable> constructor = exceptionClass.getConstructor();
-        instance = constructor.newInstance();
-      } else {
-        Constructor<? extends Throwable> constructor =
-            exceptionClass.getConstructor(this.getExceptionArgumentTypes().toArray(new Class[0]));
-        instance =
-            constructor.newInstance(this.getExceptionArgumentValues().toArray(new Object[0]));
+      ThrowableCreator creator = getCreator();
+      instance = creator.create(getExceptionArgumentValues());
+    } catch (ReflectiveOperationException | ClassCastException | JsonProcessingException e) {
+      Logger.warn("Failed to create custom exception. Fallback: Throw RuntimeException");
+      instance = new RuntimeException("Chaos Monkey - RuntimeException (Fallback)", e);
+    }
+    return instance;
+  }
+
+  @JsonIgnore
+  public ThrowableCreator getCreator() throws ReflectiveOperationException {
+    Class<?> exceptionClass = getExceptionClass();
+    Class<?>[] argumentTypes = getExceptionArgumentTypes().toArray(new Class[0]);
+    if (CONSTRUCTOR.equals(method)) {
+      return new ThrowableConstructor(
+          exceptionClass.asSubclass(Throwable.class).getConstructor(argumentTypes));
+    } else {
+      return new ThrowableStaticInitializer(exceptionClass.getMethod(method, argumentTypes));
+    }
+  }
+
+  @JsonIgnore
+  public Class<?> getExceptionClass() throws ClassNotFoundException {
+    return Class.forName(type);
+  }
+
+  private List<Class<?>> getExceptionArgumentTypes() throws ClassNotFoundException {
+    List<Class<?>> exceptionArgumentTypes = new ArrayList<>();
+    for (ExceptionArgument argument : arguments) {
+      exceptionArgumentTypes.add(argument.getClassType());
+    }
+    return exceptionArgumentTypes;
+  }
+
+  private List<Object> getExceptionArgumentValues()
+      throws ClassNotFoundException, JsonProcessingException {
+    List<Object> exceptionArgumentValues = new ArrayList<>();
+    for (ExceptionArgument argument : arguments) {
+      Class<?> classType = argument.getClassType();
+      String value = argument.getValue();
+      try {
+        // this mostly works for primitive values and strings
+        exceptionArgumentValues.add(objectMapper.convertValue(value, classType));
+      } catch (IllegalArgumentException e) {
+        // treat value as json encoded otherwise
+        exceptionArgumentValues.add(objectMapper.readValue(value, classType));
       }
-    } catch (ReflectiveOperationException e) {
-      Logger.warn(
-          "Cannot instantiate the class for provided type: {}. Fallback: Throw RuntimeException",
-          type);
-      instance = new RuntimeException("Chaos Monkey - RuntimeException");
     }
-
-    throw instance;
-  }
-
-  @JsonIgnore
-  public Class<? extends Throwable> getExceptionClass() throws ClassNotFoundException {
-    if (type == null) {
-      // use Chaos Monkey default Runtime Exception
-      type = "java.lang.RuntimeException";
-      ExceptionArgument exceptionArgument = new ExceptionArgument();
-      exceptionArgument.setClassName("java.lang.String");
-      exceptionArgument.setValue("Chaos Monkey - RuntimeException");
-      arguments = Collections.singletonList(exceptionArgument);
-    }
-    return Class.forName(type).asSubclass(Throwable.class);
-  }
-
-  @JsonIgnore
-  public List<Class> getExceptionArgumentTypes() {
-    return arguments.stream().map(ExceptionArgument::getClassType).collect(Collectors.toList());
-  }
-
-  @JsonIgnore
-  private List<Object> getExceptionArgumentValues() {
-    return arguments.stream().map(ExceptionArgument::getValue).collect(Collectors.toList());
+    return exceptionArgumentValues;
   }
 
   @Data
+  @NoArgsConstructor
+  @AllArgsConstructor
   public static class ExceptionArgument {
-
-    @NotNull private String className;
+    @NotNull private String type;
 
     @NotNull private String value;
 
     @JsonIgnore
-    public Class<?> getClassType() {
-      try {
-        return Class.forName(className);
-      } catch (ClassNotFoundException e) {
-        throw new RuntimeException("Class not found for class name: " + className);
-      }
+    public Class<?> getClassType() throws ClassNotFoundException {
+      return ClassUtils.forName(type, null);
+    }
+  }
+
+  private interface ThrowableCreator {
+    Throwable create(List<?> arguments) throws ReflectiveOperationException;
+  }
+
+  @RequiredArgsConstructor
+  private static class ThrowableConstructor implements ThrowableCreator {
+    private final Constructor<? extends Throwable> constructor;
+
+    @Override
+    public Throwable create(List<?> arguments) throws ReflectiveOperationException {
+      return constructor.newInstance(arguments.toArray());
+    }
+  }
+
+  @RequiredArgsConstructor
+  private static class ThrowableStaticInitializer implements ThrowableCreator {
+    private final Method initializer;
+
+    @Override
+    public Throwable create(List<?> arguments) throws ReflectiveOperationException {
+      return (Throwable) initializer.invoke(null, arguments.toArray());
     }
   }
 }
